@@ -22,8 +22,10 @@ summary(object, ...)
 
 The following named arguments are supported by the summary method:
 \describe{
-\item{SaturatedLikelihood}{Explicitly specify a saturated likelihood for testing (a numeric value)}
-\item{indep}{Set to FALSE to ignore independent submodels in summary.}
+\item{numObs}{Numeric. Specify the total number of observations for the model.}
+\item{numStats}{Numeric. Specify the total number of observed statistics for the model.}
+\item{SaturatedLikelihood}{Numeric. Specify a saturated likelihood for testing.}
+\item{indep}{Logical. Set to FALSE to ignore independent submodels in summary.}
 }
 
 }
