@@ -16,7 +16,8 @@ trunk
 * added R documentation for rvectorize() and cvectorize()
 * implemented eigenvalues and eigenvectors
 * checked in implementation of mergesort
-* added 'numObs' argument to mxAlgebraObjective()
+* added 'numObs', 'numStats' arguments to mxAlgebraObjective()
+* added 'numObs', 'numStats' arguments to summary()
 * changed mxCompare() signature to mxCompare(base, comparison, digits = 3)
 
 Release 0.2.10-1172 (Mar 14, 2010)
